Fix Navbar Links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li class="normal-elements"><a href="pages/join.html">Join</a></li>
                         <li class="normal-elements"><a href="#parterns">Sponsor</a></li>
                         <li class="normal-elements"><a href="pages/news.html">News</a></li>
-                        <li><a href="#" id="campaign-logo">ADS Campaign</a></li>
+                        <li><a href="#" id="campaign-logo">Campaign</a></li>
                     </ul>
                 </div>
             </div>
