--- a/pages/about.html
+++ b/pages/about.html
@@ -21,26 +21,51 @@
   </head>
   <body>
     <nav>
+      <section id="desktop-menu">
+          <div id="black-line">
+            <ul class="d-flex container">
+              <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href=""><i class="fab fa-twitter"></i></a></li>
+              <li><a href="">English</a></li>
+              <li><a href="">My Page</a></li>
+              <li><a href="">Logout</a></li>
+            </ul>
+          </div>
+          <div id="white-line">
+              <div class="container d-flex d-center">
+                  <a href=""><img src="../img/icon/SmallMainIcon.png" alt="" id="home-logo"></a>
+                  <ul class="d-flex d-center">
+                      <li class="normal-elements"><a href="pages/about.html">About</a></li>
+                      <li class="normal-elements"><a href="#main-program">Program</a></li>
+                      <li class="normal-elements"><a href="pages/join.html">Join</a></li>
+                      <li class="normal-elements"><a href="#parterns">Sponsor</a></li>
+                      <li class="normal-elements"><a href="pages/news.html">News</a></li>
+                      <li><a href="#" id="campaign-logo">Campaign</a></li>
+                  </ul>
+              </div>
+          </div>
+        </section>
       <section id="mobile-menu">
-        <div id="mobile-menu-left" class="hide-menu2"></div>
-        <ul id="mobile-nav" class="hide-menu">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="pages/about.html">About</a></li>
-          <li><a href="../index.html#main-program">Program</a></li>
-          <li><a href="../pages/join.html">Join</a></li>
-          <li><a href="#parterns">Sponsor</a></li>
-          <li><a href="../pages/news.html">News</a></li>
-        </ul>
-        <div id="mobile-menu-btn" class="d-flex d-center">
-          <div id="mobile-menu-burger"></div>
-        </div>
+          <div id="mobile-menu-left" class="hide-menu2"></div>
+          <ul id="mobile-nav" class="hide-menu">
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="pages/about.html">About</a></li>
+              <li><a href="#main-program">Program</a></li>
+              <li><a href="pages/join.html">Join</a></li>
+              <li><a href="#parterns">Sponsor</a></li>
+              <li><a href="pages/news.html">News</a></li>
+          </ul>
+          <div id="mobile-menu-btn" class="d-flex d-center">
+              <div id="mobile-menu-burger">
+              </div>
+          </div>
       </section>
     </nav>
     <header class="t-center">
       <hgroup>
         <h4>Hello Drummers!</h4>
         <h1>Legenderies Gathering in Antalya Summit 2021</h1>
-        <h5>
+        <h5 class="m-auto">
           Great Drummers of Turkey Gathering for sharing their knowledges,
           creating positive change in your music life. Join the audiance in
           October, in Turkey/Antalya.
@@ -61,7 +86,7 @@
         <p>
           The logo of Antalya Drummers Summit 2021 was created by Orçun Ugur
         </p>
-        <img src="../img/icon/MainIcon.png" alt="Main Logo" />
+        <img src="../img/icon/MainIcon.png" alt="Main Logo" class="m-auto">
       </section>
       <br />
       <section id="past-sections" class="d-flex f-column">
