--- a/pages/news.html
+++ b/pages/news.html
@@ -21,19 +21,44 @@
 </head>
 <body>
   <nav>
+    <section id="desktop-menu">
+        <div id="black-line">
+          <ul class="d-flex container">
+            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+            <li><a href="">English</a></li>
+            <li><a href="">My Page</a></li>
+            <li><a href="">Logout</a></li>
+          </ul>
+        </div>
+        <div id="white-line">
+            <div class="container d-flex d-center">
+                <a href=""><img src="../img/icon/SmallMainIcon.png" alt="" id="home-logo"></a>
+                <ul class="d-flex d-center">
+                    <li class="normal-elements"><a href="pages/about.html">About</a></li>
+                    <li class="normal-elements"><a href="#main-program">Program</a></li>
+                    <li class="normal-elements"><a href="pages/join.html">Join</a></li>
+                    <li class="normal-elements"><a href="#parterns">Sponsor</a></li>
+                    <li class="normal-elements"><a href="pages/news.html">News</a></li>
+                    <li><a href="#" id="campaign-logo">Campaign</a></li>
+                </ul>
+            </div>
+        </div>
+      </section>
     <section id="mobile-menu">
-      <div id="mobile-menu-left" class="hide-menu2"></div>
-      <ul id="mobile-nav" class="hide-menu">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="pages/about.html">About</a></li>
-        <li><a href="../index.html#main-program">Program</a></li>
-        <li><a href="../pages/join.html">Join</a></li>
-        <li><a href="../index.html#parterns">Sponsor</a></li>
-        <li><a href="../pages/news.html">News</a></li>
-      </ul>
-      <div id="mobile-menu-btn" class="d-flex d-center">
-        <div id="mobile-menu-burger"></div>
-      </div>
+        <div id="mobile-menu-left" class="hide-menu2"></div>
+        <ul id="mobile-nav" class="hide-menu">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="pages/about.html">About</a></li>
+            <li><a href="#main-program">Program</a></li>
+            <li><a href="pages/join.html">Join</a></li>
+            <li><a href="#parterns">Sponsor</a></li>
+            <li><a href="pages/news.html">News</a></li>
+        </ul>
+        <div id="mobile-menu-btn" class="d-flex d-center">
+            <div id="mobile-menu-burger">
+            </div>
+        </div>
     </section>
   </nav>
   <main class="d-flex d-center t-center coming-soon-page">
