--- a/pages/join.html
+++ b/pages/join.html
@@ -33,13 +33,13 @@
         </div>
         <div id="white-line">
             <div class="container d-flex d-center">
-                <a href=""><img src="../img/icon/SmallMainIcon.png" alt="" id="home-logo"></a>
+                <a href="../index.html"><img src="../img/icon/SmallMainIcon.png" alt="" id="home-logo"></a>
                 <ul class="d-flex d-center">
-                    <li class="normal-elements"><a href="pages/about.html">About</a></li>
-                    <li class="normal-elements"><a href="#main-program">Program</a></li>
-                    <li class="normal-elements"><a href="pages/join.html">Join</a></li>
-                    <li class="normal-elements"><a href="#parterns">Sponsor</a></li>
-                    <li class="normal-elements"><a href="pages/news.html">News</a></li>
+                    <li class="normal-elements"><a href="about.html">About</a></li>
+                    <li class="normal-elements"><a href="/index.html#main-program">Program</a></li>
+                    <li class="normal-elements"><a href="join.html">Join</a></li>
+                    <li class="normal-elements"><a href="/index.html#img-div">Sponsor</a></li>
+                    <li class="normal-elements"><a href="news.html">News</a></li>
                     <li><a href="#" id="campaign-logo">Campaign</a></li>
                 </ul>
             </div>
@@ -48,12 +48,12 @@
     <section id="mobile-menu">
         <div id="mobile-menu-left" class="hide-menu2"></div>
         <ul id="mobile-nav" class="hide-menu">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="pages/about.html">About</a></li>
-            <li><a href="#main-program">Program</a></li>
-            <li><a href="pages/join.html">Join</a></li>
-            <li><a href="#parterns">Sponsor</a></li>
-            <li><a href="pages/news.html">News</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/index.html#main-program">Program</a></li>
+            <li><a href="/join.html">Join</a></li>
+            <li><a href="/index.html#img-div">Sponsor</a></li>
+            <li><a href="/news.html">News</a></li>
         </ul>
         <div id="mobile-menu-btn" class="d-flex d-center">
             <div id="mobile-menu-burger">
