--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </div>
             <div id="white-line">
                 <div class="container d-flex d-center">
-                    <a href=""><img src="img/icon/SmallMainIcon.png" alt="" id="home-logo"></a>
+                    <a href="index.html"><img src="img/icon/SmallMainIcon.png" alt="" id="home-logo"></a>
                     <ul class="d-flex d-center">
                         <li class="normal-elements"><a href="pages/about.html">About</a></li>
                         <li class="normal-elements"><a href="#main-program">Program</a></li>
                         <li class="normal-elements"><a href="pages/join.html">Join</a></li>
-                        <li class="normal-elements"><a href="#parterns">Sponsor</a></li>
+                        <li class="normal-elements"><a href="#img-div">Sponsor</a></li>
                         <li class="normal-elements"><a href="pages/news.html">News</a></li>
                         <li><a href="#" id="campaign-logo">Campaign</a></li>
                     </ul>
@@ -44,7 +44,7 @@
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="#main-program">Program</a></li>
                 <li><a href="pages/join.html">Join</a></li>
-                <li><a href="#parterns">Sponsor</a></li>
+                <li><a href="#img-div">Sponsor</a></li>
                 <li><a href="pages/news.html">News</a></li>
             </ul>
             <div id="mobile-menu-btn" class="d-flex d-center">
