--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
           </div>
           <div id="white-line">
               <div class="container d-flex d-center">
-                  <a href="../index.html"><img src="../img/icon/SmallMainIcon.png" alt="" id="home-logo"></a>
+                  <a href="../index.html"><img src="../img/icon/SmallMainIcon.png" alt="Home Link Icon" id="home-logo"></a>
                   <ul class="d-flex d-center">
                       <li class="normal-elements"><a href="about.html">About</a></li>
                       <li class="normal-elements"><a href="/index.html#main-program">Program</a></li>
