Add Footer Icon

--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
             </div>
         </section>
         <section id="copyrights" class="d-flex"></section>
+        <section id="footer-logo" class="d-flex">
+            <img src="img/icon/FooterIcon.png" alt="Drummers Antalya Summit Logo">
+            <p>&copy;2021 Antalya Drummers Summit, Some Right Reserved</p>
+        </section>
     </footer>
     <script src="script.js"></script>
 </body>
