Update About Page Footer Section

--- a/pages/about.html
+++ b/pages/about.html
@@ -114,20 +114,24 @@
     </main>
     <footer class="m-0-1 t-center d-flex f-column">
       <section id="parterns">
-        <h2>Partners</h2>
-        <div class="underline"></div>
-        <div id="img-div" class="d-flex d-center">
-          <img src="../img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals" />
-          <img src="../img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals" />
-          <img src="../img/EvansLogo.png" alt="Evans Drumheads" />
-          <img src="../img/DwLogo.png" alt="DW Drums" />
-          <img src="../img/YamahaLogo.jpeg" alt="Yamaha Drums" />
-          <img src="../img/ProMarkLogo.png" alt="ProMark Drumsticks" />
-          <img src="../img/TamaLogo.png" alt="Tama Drums" />
-        </div>
+          <h2>Partners</h2>
+          <div class="underline"></div>
+          <div id="img-div" class="d-flex d-center">
+              <img src="img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals">
+              <img src="img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals">
+              <img src="img/EvansLogo.png" alt="Evans Drumheads">
+              <img src="img/DwLogo.png" alt="DW Drums">
+              <img src="img/YamahaLogo.jpeg" alt="Yamaha Drums">
+              <img src="img/ProMarkLogo.png" alt="ProMark Drumsticks">
+              <img src="img/TamaLogo.png" alt="Tama Drums">
+          </div>
       </section>
       <section id="copyrights" class="d-flex"></section>
-    </footer>
+      <section id="footer-logo" class="d-flex">
+          <img src="../img/icon/FooterIcon.png" alt="Drummers Antalya Summit Logo">
+          <p>&copy;2021 Antalya Drummers Summit, Some Right Reserved</p>
+      </section>
+  </footer>
     <script src="aboutscript.js"></script>
   </body>
 </html>
