Add Disabled Navlinks

--- a/pages/about.html
+++ b/pages/about.html
@@ -48,12 +48,12 @@
       <section id="mobile-menu">
           <div id="mobile-menu-left" class="hide-menu2"></div>
           <ul id="mobile-nav" class="hide-menu">
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/about.html">About</a></li>
-              <li><a href="/index.html#main-program">Program</a></li>
-              <li><a href="/join.html">Join</a></li>
-              <li><a href="/index.html#img-div">Sponsor</a></li>
-              <li><a href="/news.html">News</a></li>
+            <li><a href="../index.html">Home</a></li>
+              <li><a href="../pages/about.html">About</a></li>
+              <li><a href="../index.html#main-program">Program</a></li>
+              <li><a href="../pages/join.html">Join</a></li>
+              <li><a href="../index.html#img-div">Sponsor</a></li>
+              <li><a href="/pages/news.html">News</a></li>
           </ul>
           <div id="mobile-menu-btn" class="d-flex d-center">
               <div id="mobile-menu-burger">
@@ -117,13 +117,13 @@
           <h2>Partners</h2>
           <div class="underline"></div>
           <div id="img-div" class="d-flex d-center">
-              <img src="img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals">
-              <img src="img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals">
-              <img src="img/EvansLogo.png" alt="Evans Drumheads">
-              <img src="img/DwLogo.png" alt="DW Drums">
-              <img src="img/YamahaLogo.jpeg" alt="Yamaha Drums">
-              <img src="img/ProMarkLogo.png" alt="ProMark Drumsticks">
-              <img src="img/TamaLogo.png" alt="Tama Drums">
+              <img src="../img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals">
+              <img src="../img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals">
+              <img src="../img/EvansLogo.png" alt="Evans Drumheads">
+              <img src="../img/DwLogo.png" alt="DW Drums">
+              <img src="../img/YamahaLogo.jpeg" alt="Yamaha Drums">
+              <img src="../img/ProMarkLogo.png" alt="ProMark Drumsticks">
+              <img src="../img/TamaLogo.png" alt="Tama Drums">
           </div>
       </section>
       <section id="copyrights" class="d-flex"></section>
