--- a/pages/join.html
+++ b/pages/join.html
@@ -36,9 +36,9 @@
                 <a href="../index.html"><img src="../img/icon/SmallMainIcon.png" alt="Home Link Icon" id="home-logo"></a>
                 <ul class="d-flex d-center">
                     <li class="normal-elements"><a href="about.html">About</a></li>
-                    <li class="normal-elements"><a href="/index.html#main-program">Program</a></li>
+                    <li class="normal-elements"><a href="../index.html#main-program">Program</a></li>
                     <li class="normal-elements"><a href="join.html">Join</a></li>
-                    <li class="normal-elements"><a href="/index.html#img-div">Sponsor</a></li>
+                    <li class="normal-elements"><a href="../index.html#img-div">Sponsor</a></li>
                     <li class="normal-elements"><a href="news.html">News</a></li>
                     <li><a href="#" id="campaign-logo">Campaign</a></li>
                 </ul>
