--- a/pages/news.html
+++ b/pages/news.html
@@ -36,9 +36,9 @@
                 <a href="../index.html"><img src="../img/icon/SmallMainIcon.png" alt="Home Link Icon" id="home-logo"></a>
                 <ul class="d-flex d-center">
                     <li class="normal-elements"><a href="about.html">About</a></li>
-                    <li class="normal-elements"><a href="/index.html#main-program">Program</a></li>
+                    <li class="normal-elements"><a href="../index.html#main-program">Program</a></li>
                     <li class="normal-elements"><a href="join.html">Join</a></li>
-                    <li class="normal-elements"><a href="/index.html#img-div">Sponsor</a></li>
+                    <li class="normal-elements"><a href="../index.html#img-div">Sponsor</a></li>
                     <li class="normal-elements"><a href="news.html">News</a></li>
                     <li><a href="#" id="campaign-logo">Campaign</a></li>
                 </ul>
@@ -49,11 +49,11 @@
         <div id="mobile-menu-left" class="hide-menu2"></div>
         <ul id="mobile-nav" class="hide-menu">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../pages/about.html">About</a></li>
-          <li><a href="../index.html#main-program">Program</a></li>
-          <li><a href="../pages/join.html">Join</a></li>
-          <li><a href="../index.html#img-div">Sponsor</a></li>
-          <li><a href="/pages/news.html">News</a></li>
+            <li><a href="../pages/about.html">About</a></li>
+            <li><a href="../index.html#main-program">Program</a></li>
+            <li><a href="../pages/join.html">Join</a></li>
+            <li><a href="../index.html#img-div">Sponsor</a></li>
+            <li><a href="/pages/news.html">News</a></li>
         </ul>
         <div id="mobile-menu-btn" class="d-flex d-center">
             <div id="mobile-menu-burger">
