Fixed Card Area,

--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
             <h2>Featured Speakers</h2>
             <div class="underline"></div>
             <div id="featured-speakers">
-                <div class="card-speaker d-flex">
-                <img class="speaker-image" src="..." alt="">
+                <div class="card-speaker">
+                    <div class="speaker-image-container">
+                        <img class="speaker-image" src="..." alt="">
+                    </div>
                 <div>
                     <h3 class="speaker-name"></h3>
                     <p class="speaker-resume"></p>
@@ -111,8 +113,10 @@
                     <p class="speaker-description"></p>
                 </div>
                 </div>
-                <div class="card-speaker d-flex">
-                <img class="speaker-image" src="..." alt="">
+                <div class="card-speaker">
+                    <div class="speaker-image-container">
+                        <img class="speaker-image" src="..." alt="">
+                    </div>
                 <div>
                     <h3 class="speaker-name"></h3>
                     <p class="speaker-resume"></p>
@@ -120,8 +124,10 @@
                     <p class="speaker-description"></p>
                 </div>
                 </div>
-                <div class="card-speaker d-flex p-fixed ts-1 hide-menu2">
-                <img class="speaker-image" src="..." alt="">
+                <div class="card-speaker p-fixed ts-1 hide-menu2">
+                    <div class="speaker-image-container">
+                        <img class="speaker-image" src="..." alt="">
+                    </div>
                 <div>
                     <h3 class="speaker-name"></h3>
                     <p class="speaker-resume"></p>
@@ -129,8 +135,10 @@
                     <p class="speaker-description"></p>
                 </div>
                 </div>
-                <div class="card-speaker d-flex p-fixed ts-12 hide-menu2">
-                <img class="speaker-image" src="..." alt="">
+                <div class="card-speaker p-fixed ts-12 hide-menu2">
+                    <div class="speaker-image-container">
+                        <img class="speaker-image" src="..." alt="">
+                    </div>
                 <div>
                     <h3 class="speaker-name"></h3>
                     <p class="speaker-resume"></p>
@@ -138,8 +146,10 @@
                     <p class="speaker-description"></p>
                 </div>
                 </div>
-                <div class="card-speaker d-flex p-fixed ts-14 hide-menu2">
-                <img class="speaker-image" src="..." alt="">
+                <div class="card-speaker p-fixed ts-14 hide-menu2">
+                    <div class="speaker-image-container">
+                        <img class="speaker-image" src="..." alt="">
+                    </div>
                 <div>
                     <h3 class="speaker-name"></h3>
                     <p class="speaker-resume"></p>
@@ -147,8 +157,10 @@
                     <p class="speaker-description"></p>
                 </div>
                 </div>
-                <div class="card-speaker d-flex p-fixed ts-16 hide-menu2">
-                <img class="speaker-image" src="..." alt="">
+                <div class="card-speaker p-fixed ts-16 hide-menu2">
+                    <div class="speaker-image-container">
+                        <img class="speaker-image" src="..." alt="">
+                    </div>
                 <div>
                     <h3 class="speaker-name"></h3>
                     <p class="speaker-resume"></p>
