Fix Hyprlink news

--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
               <li><a href="../index.html#main-program">Program</a></li>
               <li><a href="../pages/join.html">Join</a></li>
               <li><a href="../index.html#img-div">Sponsor</a></li>
-              <li><a href="/pages/news.html">News</a></li>
+              <li><a href="../news.html">News</a></li>
           </ul>
           <div id="mobile-menu-btn" class="d-flex d-center">
               <div id="mobile-menu-burger">
