--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
-    <link rel="shortcut icon" type="image/x-icon" href="img/icon/SmallMainIcon.png" />
+    <link rel="icon" type="image/png" href="img/icon/MetaIcon.png" />
     <title>Home</title>
 </head>
 <body>
